--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "balla",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jacobtrebil.github.io/coming-soon",
+  "homepage": "https://balla.ai",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
